# SmartPriceAggregator

./: README.md
app/: .gitignore  alembic.ini  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 70c3dcef6be8_initial_schema.py
app/core/: config.py  logger.py
app/database/: session.py
app/models/: __init__.py  master_product.py  offer.py  raw_product.py  shop.py
app/normalization/: blocking_key.py  product_normalize.py  text.py  weight.py
app/parsers/: petshop.py
app/services/: aggregation.py  normalization_services.py  shop_services.py
